<resources>
    <string name="app_name">P013AB</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="websites">WEBSITES</string>
    <string name="abesit">Abesit</string>
    <string name="moodle">Moodle</string>
    <string name="aktu">Aktu</string>
    <string name="one_view">One View</string>
    <string name="more">More</string>
    <string name="placement">Placements</string>
    <string name="notices">Notices</string>
    <string name="news_and_event">News and Event</string>
</resources>
